# sdkwork-payment

./: AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/app-api/payment/: README.md  sdkwork-payment-app-api.openapi.yaml
apis/backend-api/payment/: README.md  sdkwork-payment-backend-api.openapi.yaml
apps/: README.md
apps/sdkwork-payment-common/: README.md
apps/sdkwork-payment-pc/: index.html  package.json  sdkwork.app.config.json  tsconfig.json  vite.config.ts
apps/sdkwork-payment-pc/specs/: dependency.composition.json
apps/sdkwork-payment-pc/src/: ErrorBoundary.tsx  main.tsx
crates/sdkwork-api-payment-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-payment-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-payment-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-payment-standalone-gateway/: Cargo.toml
crates/sdkwork-api-payment-standalone-gateway/src/: main.rs
crates/sdkwork-commerce-payment-repository-sqlx/: Cargo.toml
crates/sdkwork-commerce-payment-repository-sqlx/src/: lib.rs  postgres_owner_order_payment.rs  postgres_payment.rs  postgres_payment_intent.rs  postgres_recharge.rs  postgres_refund.rs  shared.rs  sqlite_owner_order_payment.rs  sqlite_payment.rs  sqlite_payment_intent.rs  sqlite_recharge.rs  sqlite_refund.rs
crates/sdkwork-commerce-payment-service/: Cargo.toml  README.md
crates/sdkwork-commerce-payment-service/specs/: README.md  component.spec.json
crates/sdkwork-commerce-payment-service/tests/: payment_standard.rs
crates/sdkwork-payment-api-server/: Cargo.toml
crates/sdkwork-payment-api-server/src/: lib.rs  main.rs
crates/sdkwork-payment-database-host/: Cargo.toml
crates/sdkwork-payment-database-host/src/: lib.rs
crates/sdkwork-payment-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-payment-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-payment-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-payment-providers/: Cargo.toml
crates/sdkwork-payment-providers/src/: adapter.rs  alipay.rs  checkout.rs  credential_cipher.rs  credentials.rs  error.rs  http.rs  lib.rs  money.rs  operations.rs  registry.rs  stripe.rs  webhook_peek.rs  wechat_pay.rs
crates/sdkwork-payment-repository-sqlx/: Cargo.toml
crates/sdkwork-payment-repository-sqlx/src/: lib.rs  order_reference.rs  owner_order_checkout.rs  owner_order_payment_port.rs  owner_payment_params.rs  payment_attempt_context.rs  payment_channel.rs  payment_method.rs  postgres_owner_order_payment.rs  postgres_payment.rs  postgres_payment_intent.rs  postgres_recharge.rs  postgres_refund.rs  postgres_webhook_ingestion.rs  provider_account.rs  provider_credential.rs  shared.rs  sqlite_owner_order_payment.rs  sqlite_payment.rs  sqlite_payment_intent.rs  sqlite_recharge.rs  sqlite_refund.rs  sqlite_store_integration.rs  sqlite_webhook_ingestion.rs  sqlite_webhook_worker.rs  test_sqlite_pool.rs  webhook_event_payload.rs  webhook_replay.rs  webhook_status.rs
crates/sdkwork-payment-repository-sqlx/test_migrations/: 0001_payment_store_e2e.sql
crates/sdkwork-payment-service/: Cargo.toml  README.md
crates/sdkwork-payment-service-host/: Cargo.toml
crates/sdkwork-payment-service-host/src/: lib.rs
crates/sdkwork-payment-service/specs/: README.md  component.spec.json
crates/sdkwork-payment-service/src/: lib.rs
crates/sdkwork-payment-service/src/commands/: mod.rs
crates/sdkwork-payment-service/src/domain/: mod.rs
crates/sdkwork-payment-service/src/ports/: mod.rs  owner_order_payment.rs
crates/sdkwork-payment-service/src/providers/: mod.rs  sandbox.rs
crates/sdkwork-payment-service/src/queries/: intent.rs  mod.rs  owner_payment.rs  refund.rs
crates/sdkwork-payment-service/src/service/: mod.rs
crates/sdkwork-payment-service/tests/: payment_standard.rs
crates/sdkwork-payment-standalone-gateway/: Cargo.toml
crates/sdkwork-payment-standalone-gateway/src/: main.rs
crates/sdkwork-router-payment-app-api/: Cargo.toml
crates/sdkwork-router-payment-app-api/src/: lib.rs  payment_intent_router.rs  recharge_router.rs  refund_router.rs
crates/sdkwork-router-payment-backend-api/: Cargo.toml
crates/sdkwork-router-payment-backend-api/src/: lib.rs
crates/sdkwork-routes-payment-app-api/: Cargo.toml
crates/sdkwork-routes-payment-app-api/specs/: component.spec.json
crates/sdkwork-routes-payment-app-api/src/: api_response.rs  command_headers.rs  http_route_manifest.rs  lib.rs  payment_intent_router.rs  payment_router.rs  problem_details.rs  recharge_proxy_router.rs  recharge_router.rs  refund_router.rs  routes.rs  web_bootstrap.rs  webhook_router.rs
crates/sdkwork-routes-payment-backend-api/: Cargo.toml
crates/sdkwork-routes-payment-backend-api/specs/: component.spec.json
crates/sdkwork-routes-payment-backend-api/src/: api_response.rs  backend_payment_admin_router.rs  backend_payment_integration_router.rs  backend_payment_intent_router.rs  backend_payment_refund_router.rs  command_headers.rs  http_route_manifest.rs  lib.rs  order_fulfillment_client.rs  owner_order_confirmation_router.rs  owner_order_settlement.rs  problem_details.rs  routes.rs  subject.rs  web_bootstrap.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/migrations/postgres/: 0002_provider_credentials.up.sql
database/seeds/: seed.manifest.json
docs/: INDEX.yaml  README.md
sdks/sdkwork-payment-app-sdk/: sdk-manifest.json
sdks/sdkwork-payment-backend-sdk/: README.md  sdk-manifest.json
specs/: PAYMENT_EXECUTOR_SPEC.md  README.md  commerce-boundary.spec.json  commerce-dependency-boundary.spec.json  commerce-payment-webhook.spec.json  component.spec.json  iam.module.manifest.json
tests/static/: placeholder.test.mjs
tools/: migrate_payment_sql_from_order.py  payment_app_sdk_generate.mjs  payment_sdk_generate.mjs
(+49 files in other folders)
