[workspace]
resolver = "2"
members = [
    "crates/sdkwork-api-payment-assembly",
  "crates/sdkwork-payment-service",
  "crates/sdkwork-payment-providers",
  "crates/sdkwork-payment-repository-sqlx",
  "crates/sdkwork-routes-payment-app-api",
  "crates/sdkwork-routes-payment-backend-api",
  "crates/sdkwork-payment-database-host",
  "crates/sdkwork-payment-service-host",
  "crates/sdkwork-api-payment-standalone-gateway",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "AGPL-3.0-or-later"
publish = false

[workspace.dependencies]
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust", package = "sdkwork-utils-rust" }
axum = "0.8"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "limit"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
thiserror = "1"
async-trait = "0.1"
aes-gcm = "0.10"
base64 = "0.22"
hmac = "0.12"
ring = "0.17"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
urlencoding = "2.1"
sdkwork_contract_service = { path = "../sdkwork-account/crates/sdkwork-contract-service", package = "sdkwork-contract-service" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_iam_context_service = { path = "../sdkwork-iam/crates/sdkwork-iam-context-service", package = "sdkwork-iam-context-service" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork_payment_service = { path = "crates/sdkwork-payment-service", package = "sdkwork-payment-service" }
sdkwork_payment_providers = { path = "crates/sdkwork-payment-providers", package = "sdkwork-payment-providers" }
sdkwork_payment_repository_sqlx = { path = "crates/sdkwork-payment-repository-sqlx", package = "sdkwork-payment-repository-sqlx" }
sdkwork_routes_payment_app_api = { path = "crates/sdkwork-routes-payment-app-api", package = "sdkwork-routes-payment-app-api" }
sdkwork_routes_payment_backend_api = { path = "crates/sdkwork-routes-payment-backend-api", package = "sdkwork-routes-payment-backend-api" }
sdkwork_payment_database_host = { path = "crates/sdkwork-payment-database-host", package = "sdkwork-payment-database-host" }
sdkwork_payment_service_host = { path = "crates/sdkwork-payment-service-host", package = "sdkwork-payment-service-host" }
sdkwork_api_payment_assembly = { path = "crates/sdkwork-api-payment-assembly", package = "sdkwork-api-payment-assembly" }
