[package]
name = "sdkwork-api-payment-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-payment application HTTP plane."

[lib]
name = "sdkwork_api_payment_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-routes-payment-app-api = { path = "../sdkwork-routes-payment-app-api" }
sdkwork-routes-payment-backend-api = { path = "../sdkwork-routes-payment-backend-api" }
