[package]
name = "sdkwork-api-payment-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkwork-api-payment-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_api_payment_assembly.workspace = true
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork_payment_service_host.workspace = true
