[package]
name = "sdkwork-commerce-payment-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sdkwork_commerce_contract_service.workspace = true
sdkwork_commerce_order_repository_sqlx.workspace = true
sdkwork_commerce_order_service.workspace = true
sdkwork_commerce_payment_service.workspace = true
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
