[package]
name = "sdkwork-payment-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-payment application HTTP plane."

[lib]
name = "sdkwork_payment_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_payment_service_host.workspace = true
sdkwork_routes_payment_app_api = { package = "sdkwork-routes-payment-app-api", path = "../sdkwork-routes-payment-app-api" }
sdkwork_routes_payment_backend_api = { package = "sdkwork-routes-payment-backend-api", path = "../sdkwork-routes-payment-backend-api" }
