[package]
name = "sdkwork-payment-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-payment application HTTP plane."

[lib]
name = "sdkwork_payment_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork_payment_service_host.workspace = true
sdkwork-web-bootstrap.workspace = true
sdkwork-web-core.workspace = true
sdkwork_routes_payment_app_api.workspace = true
sdkwork_routes_payment_backend_api.workspace = true
