[package]
name = "sdkwork-payment-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Payment service provider adapters (Stripe, Alipay, WeChat Pay) for sdkwork-payment."

[lib]
path = "src/lib.rs"

[dependencies]
aes-gcm.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
hmac.workspace = true
reqwest.workspace = true
ring.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
urlencoding.workspace = true
sdkwork_contract_service.workspace = true
sdkwork_payment_service.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
