[package]
name = "sdkwork-payment-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sdkwork_contract_service.workspace = true
sdkwork_order_repository_sqlx.workspace = true
sdkwork_order_service.workspace = true
sdkwork_payment_service.workspace = true
sdkwork-utils-rust.workspace = true
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
