[package]
name = "sdkwork-payment-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkwork-payment-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_payment_gateway_assembly = { package = "sdkwork-payment-gateway-assembly", path = "../sdkwork-payment-gateway-assembly" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork_payment_service_host.workspace = true
